--- a/app/view/css/Posts.css
+++ b/app/view/css/Posts.css
@@ -8,15 +8,16 @@
 /*          post             */
 /* ///////////////////////// */
 .post{
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  max-width: 700px;
   overflow: hidden;
   box-shadow: 0px 0px 20px var(--shadow);
   border-radius: 20px;
   margin-bottom: 20px;
+  grid-column-start: 2;
+  grid-column-end: 10;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: lightseagreen;
 }
 .pop_window{
     display: grid;
