--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -11,8 +11,12 @@ html, body {
     overflow: auto;
     overflow-x: hidden;
     min-height: 650px;
-    /* position: relative; */
+}
 
+body {
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-rows: auto;
 }
 
 
@@ -32,29 +36,33 @@ html, body {
 .content {
     height: auto;
     margin-top: auto;
-    padding-left: 5px;
-    padding-right: 5px;
     overflow: hidden;
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding-top: 1rem;
+    grid-column-start: 1;
+    grid-column-end: 11;
+    grid-row-start: 2;
+    grid-row-end: auto;
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-rows: auto;
+    
 }
 
 
 .navBar {
     width: 100%;
     height: 65px;
-    /* display: block; */
-    /* display: inline-flex; */
     background-color: var(--headPost);
-    /* justify-content: space-around; */
-    
     box-shadow: 0px 0px 20px var(--shadow);
-    position: fixed;
     z-index: 4;
     transition: all 0.5s;
     display: grid;
     grid-template-columns: auto auto auto;
     grid-template-rows: auto;
+    grid-column-start: 1;
+    grid-column-end: 11;
+    grid-row-start: 1;
+    grid-row-end: 2;
 
 }
 
