--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -1,21 +1,27 @@
 
 
-.contener_camera{
+/* .contener_camera{
     display: block;
     max-width: 1300px;
-    /* background-color: violet; */
 }
 
 .Btn {
     position: relative;
+} */
+
+.form{
+    grid-column-start: 1;
+    grid-column-end: 10;
 }
 
 .stickers{
     height: 55px;
-    width: 100%;
+    /* width: 100%; */
     box-shadow: 0px 0px 10px var(--shadow);
     border-radius: 5px;
     margin-top: 20px;
+    grid-column-start: 2;
+    grid-column-end: 10;
 }
 
 .stickers img {
@@ -83,35 +89,72 @@
 
 }
 
+.control-camera {
+    grid-column-start: 2;
+}
+
+.control-stickers {
+    grid-column-start: 3;
+}
+
+.control-camera , .control-stickers{
+    height: 40px;
+    /* width: 100px; */
+    /* margin-left: 20px; */
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /* display: inline-block; */
+}
+
+
+
+.control-camera .control::after{content: "\f030";}
+.control-stickers .control::after{content: '\f2ab'}
+
+
+.contener_camera{
+    grid-column-start: 2;
+    grid-column-end: 10;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+}
+
+.out-form{
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
 .contener_video{
-    display: inline-flex;
-    width: 100%;
-    height: 100%;
-    margin: auto !important;
+    /* display: inline-flex; */
+    /* width: 100%; */
+    /* height: 100%; */
+    /* margin: auto !important; */
+    grid-column-start: 1;
+    grid-column-end: 10;
 }
 
 #video_id{
-    width: 600px;
-    height: 300px;
-    position: relative;
+    /* width: 600px; */
+    /* height: 300px; */
+    /* position: relative; */
 
 }
 
 #canva_id{
-    width: 600px;
-    height: 300px;
-    position: relative;
+    /* width: 600px; */
+    /* height: 300px; */
+    /* position: relative; */
 }
 
 #canva_id, #video_id{
-    margin: auto !important;
+    /* margin: auto !important; */
     background-color: blueviolet;
 }
 
 #canva, #video {
-    display: block !important;
-    display: table-cell;
-    margin: auto !important;
+    /* display: block !important; */
+    /* display: table-cell; */
+    /* margin: auto !important; */
     box-shadow: 0px 0px 10px var(--shadow);
     border-radius: 5px;
     padding: 0%;
@@ -123,28 +166,12 @@
 .btncaptuer::before{content: "\f030";}
 .btncaptuerIn::before{content: "\f030";}
 .btnShr::before{content: "\f14d";}
-.out-form{
-    margin-bottom: 20px;
-    max-width: 600px;
-}
 
 .btncaptuerIn{
     opacity: 0.5;
     display: none !important;
 }
 
-.control-camera , .control-stickers{
-    height: 40px;
-    width: 100px;
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: inline-block;
-}
-
-
-.control-camera .control::after{content: "\f030";}
-.control-stickers .control::after{content: '\f2ab'}
 
 .hiddenBtn{
     display: none !important;
@@ -156,7 +183,7 @@
 
 
 #hiddenCanva{
-    width: 600px;
+    /* width: 600px; */
     height: 300px;
     display: none !important;
     /* background-color: blue; */
@@ -164,13 +191,15 @@
 
 
 .thumbnails{
-    display: block;
-    max-width: 1300px;
+    /* display: block; */
+    /* max-width: 1300px; */
+    grid-column-start: 1;
+    grid-column-end: 11;
 }
 
 
 
-@media only screen and (max-width: 1250px){
+/* @media only screen and (max-width: 1250px){
     .contener_video{
         display: block;
     }
@@ -194,4 +223,4 @@
         width: 40px;
     }
 
-}
+} */
