--- a/app/view/css/btns.css
+++ b/app/view/css/btns.css
@@ -109,6 +109,7 @@
   cursor: pointer;
   height: 0;
   width: 0;
+  display: none;
 }
 .toggle-control input[type=checkbox]:checked ~ .control {
   background-color: dodgerblue;
