--- a/app/view/css/form.css
+++ b/app/view/css/form.css
@@ -8,7 +8,7 @@
 .form form{
     width: auto;
     display: grid;
-    grid-template-columns: 40px auto 40px;
+    grid-template-columns: 30px auto 30px;
     grid-template-rows: auto;
 }
 
@@ -40,7 +40,6 @@
 .form h2:last-of-type{
     grid-column-start: 2;
     grid-column-end: 2;
-    /* height: auto; */
     grid-row-start: 2;
     grid-row-end: 3;
     justify-self: center;
@@ -63,14 +62,14 @@
     grid-row-start: auto;
     width: auto;
     padding-right: 25px;
-    margin-top: -2px;
+    margin-top: -4px;
 }
 
 .left {
     border-radius: 40px 0px 0px 40px;
     -webkit-border-radius: 40px 0px 0px 40px;
     -moz-border-radius: 40px 0px 0px 40px;
-    margin-top: -2px;
+    margin-top: -4px;
     padding-left: 25px;
     border-style: solid none solid solid;
     grid-column-start: 1;
@@ -78,22 +77,21 @@
     grid-row-start: auto;
 }
 
-.center{
+.out-form{
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-style: solid;
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    /* display: block; */
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .form ::placeholder, .out-form::placeholder{
-    /* padding-right: 80px; */
     color: var(--ColorSCfont);
     text-align: center;
     font-weight: bold;
     opacity: 0.3;
+
 }
 
 .submit {
@@ -130,7 +128,7 @@
 
 .fa{
     color: var(--ColorMainFont);
-    font-size: 25px;
+    font-size: 20px;
     width: 25px;
     text-align: center;
     cursor: pointer;
