--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -43,7 +43,7 @@ body {
     grid-row-start: 2;
     grid-row-end: auto;
     display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-columns: auto auto auto  auto auto auto auto auto auto auto;
     grid-template-rows: auto;
     
 }
