--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -174,13 +174,13 @@
     grid-column-end: -1;
     grid-column-start: 2;
     justify-self: center;
-    width: auto;
+    /* width: auto; */
 }
 
 #canva_id, #video_id{
     display: table-cell;
-    width: auto;
-    height: auto;
+    /* width: auto;
+    height: auto; */
     margin: auto;
 }
 
@@ -279,25 +279,30 @@
     #video_id{
         grid-column-start: 1;
         grid-column-end: 3;
+        margin: 0%;
+        width: auto;
+        /* padding: 0%; */
         /* width: 100%;
         height: 360px; */
-        background-color: gold;
+        background-color:green;
     }
     #canva_id{
         grid-column-start: 1;
         grid-column-end: 3;
-        width: auto;
-        height: auto;
+        /* width: auto;
+        height: auto; */
     }
 
     #video{
-        width: 100%;
-        height: 360px;
+        
+        width: 100% !important;
+        height: 100% !important;
+        /* margin: 0% !important; */
     }
 
     #canva{
-        width: 100%;
-        height: 100%;
+        /* width: 100%;
+        height: 100%; */
     }
 
     .btncaptuerIn{
