--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -289,6 +289,7 @@
     #canva_id{
         grid-column-start: 1;
         grid-column-end: 3;
+        
         /* width: auto;
         height: auto; */
     }
@@ -301,8 +302,8 @@
     }
 
     #canva{
-        /* width: 100%;
-        height: 100%; */
+        width: 100%;
+        height: 100%;
     }
 
     .btncaptuerIn{
